Fix index.html problem for netlify

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=%process.env.%REACT_APP_SECRET%&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=process.env.%REACT_APP_SECRET%&callback=initMap"
     ></script>
   </body>
 </html>
