--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    <script
+      type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=process.env.REACT_APP_SECRET&libraries=places"
+    ></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,14 +42,5 @@
         To begin the development, run `npm start` or `yarn start`.
         To create a production bundle, use `npm run build` or `yarn build`.
       -->
-    <script
-      type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=process.env.%REACT_APP_SECRET%&libraries=places"
-    ></script>
-    <script
-      async
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=process.env.%REACT_APP_SECRET%&callback=initMap"
-    ></script>
   </body>
 </html>
