Add api key after restricting

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script
       type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=APIKEY&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbfvSEiGpyht7Y7yChfxG5kG3ooi1VDmg&libraries=places"
     ></script>
     <div id="root"></div>
     <!--
