--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    <script
+      type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAdnIYDHmla2X-742NLLWFJ_m1uH6mKOPA&libraries=places"
+    ></script>
     <div id="root"></div>
 
     <!--
